--- a/package.json
+++ b/package.json
@@ -10,12 +10,15 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.1.5",
+    "aos": "^2.3.4",
     "heroicons": "^2.1.5",
     "next": "14.2.5",
     "react": "^18",
+    "react-aos": "^1.0.1",
     "react-dom": "^18",
     "react-multi-carousel": "^2.8.5",
     "react-particles": "^2.12.2",
+    "react-scroll": "^1.9.0",
     "react-tsparticles": "^2.12.2",
     "react-type-animation": "^3.2.0",
     "tsparticles-slim": "^2.12.0"
@@ -24,11 +27,58 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/react-scroll": "^1.8.10",
     "autoprefixer": "^10.4.20",
     "eslint": "^8",
     "eslint-config-next": "14.2.5",
     "postcss": "^8.4.40",
     "tailwindcss": "^3.4.7",
     "typescript": "^5"
+  },
+  "node_modules/eslint": {
+    "version": "8.57.0",
+    "resolved": "https://registry.npmjs.org/eslint/-/eslint-8.57.0.tgz",
+    "integrity": "sha512-dZ6+mexnaTIbSBZWgou51U6OmzIhYM2VcNdtiTtI7qPNZm35Akpr0f6vtw3w1Kmn5PYo+tZVfh13WrhpS6oLqQ==",
+    "dev": true,
+    "dependencies": {
+      "@eslint-community/eslint-utils": "^4.2.0",
+      "@eslint-community/regexpp": "^4.6.1",
+      "@eslint/eslintrc": "^2.1.4",
+      "@eslint/js": "8.57.0",
+      "@humanwhocodes/config-array": "^0.11.14",
+      "@humanwhocodes/module-importer": "^1.0.1",
+      "@nodelib/fs.walk": "^1.2.8",
+      "@ungap/structured-clone": "^1.2.0",
+      "ajv": "^6.12.4",
+      "chalk": "^4.0.0",
+      "cross-spawn": "^7.0.2",
+      "debug": "^4.3.2",
+      "doctrine": "^3.0.0",
+      "escape-string-regexp": "^4.0.0",
+      "eslint-scope": "^7.2.2",
+      "eslint-visitor-keys": "^3.4.3",
+      "espree": "^9.6.1",
+      "esquery": "^1.4.2",
+      "esutils": "^2.0.2",
+      "fast-deep-equal": "^3.1.3",
+      "file-entry-cache": "^6.0.1",
+      "find-up": "^5.0.0",
+      "glob-parent": "^6.0.2",
+      "globals": "^13.19.0",
+      "graphemer": "^1.4.0",
+      "ignore": "^5.2.0",
+      "imurmurhash": "^0.1.4",
+      "is-glob": "^4.0.0",
+      "is-path-inside": "^3.0.3",
+      "js-yaml": "^4.1.0",
+      "json-stable-stringify-without-jsonify": "^1.0.1",
+      "levn": "^0.4.1",
+      "lodash.merge": "^4.6.2",
+      "minimatch": "^3.1.2",
+      "natural-compare": "^1.4.0",
+      "optionator": "^0.9.3",
+      "strip-ansi": "^6.0.1",
+      "text-table": "^0.2.0"
+    }
   }
 }
