--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.1.5",
-    "aos": "^2.3.4",
+    "aos": "^3.0.0-beta.6",
     "heroicons": "^2.1.5",
     "next": "14.2.5",
     "react": "^18",
@@ -24,6 +24,7 @@
     "tsparticles-slim": "^2.12.0"
   },
   "devDependencies": {
+    "@types/aos": "^3.0.7",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
