--- a/package.json
+++ b/package.json
@@ -8,21 +8,20 @@
     "start": "next start",
     "lint": "next lint"
   },
-  "dependencies": {
-    "@heroicons/react": "^2.1.5",
-    "aos": "^3.0.0-beta.6",
-    "heroicons": "^2.1.5",
-    "next": "14.2.5",
-    "react": "^18",
-    "react-aos": "^1.0.1",
-    "react-dom": "^18",
-    "react-multi-carousel": "^2.8.5",
-    "react-particles": "^2.12.2",
-    "react-scroll": "^1.9.0",
-    "react-tsparticles": "^2.12.2",
-    "react-type-animation": "^3.2.0",
-    "tsparticles-slim": "^2.12.0"
-  },
+"dependencies": {
+  "@heroicons/react": "^2.1.5",
+  "@tsparticles/react": "^3.0.0",
+  "aos": "^3.0.0-beta.6",
+  "heroicons": "^2.1.5",
+  "next": "14.2.5",
+  "react": "^18",
+  "react-aos": "^1.0.1",
+  "react-dom": "^18",
+  "react-multi-carousel": "^2.8.5",
+  "react-scroll": "^1.9.0",
+  "react-type-animation": "^3.2.0",
+  "tsparticles": "^3.5.0"
+},
   "devDependencies": {
     "@types/aos": "^3.0.7",
     "@types/node": "^20",
