--- a/package.json
+++ b/package.json
@@ -17,11 +17,8 @@
     "react-aos": "^1.0.1",
     "react-dom": "^18",
     "react-multi-carousel": "^2.8.5",
-    "react-particles": "^2.12.2",
     "react-scroll": "^1.9.0",
-    "react-tsparticles": "^2.12.2",
-    "react-type-animation": "^3.2.0",
-    "tsparticles-slim": "^2.12.0"
+    "react-type-animation": "^3.2.0"
   },
   "devDependencies": {
     "@types/aos": "^3.0.7",
