--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "aos": "^3.0.0-beta.6",
     "heroicons": "^2.1.5",
     "next": "14.2.5",
+    "nodemailer": "^6.9.14",
     "react": "^18",
     "react-aos": "^1.0.1",
     "react-dom": "^18",
@@ -23,6 +24,7 @@
   "devDependencies": {
     "@types/aos": "^3.0.7",
     "@types/node": "^20",
+    "@types/nodemailer": "^6.4.15",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "@types/react-scroll": "^1.8.10",
