--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.1.5",
+    "@sendgrid/mail": "^8.1.3",
     "aos": "^3.0.0-beta.6",
     "heroicons": "^2.1.5",
     "next": "14.2.5",
